public/css/main.css
:root {
  --dark-background: #090a0b;
  --clear-text: ghostwhite;
  /* purple */
  --light-purple: #d4c3d8;
  --medium-purple: #9783b4;
  --intense-purple: #402666;
  /* green */
  --light-green: #dee8e3;
  --medium-green: #7ed6ac;
  --intense-green: #30646b;
}

h1 {
  font-size: 3rem;
}
h2 {
  font-size: 1.8rem;
}
h3 {
  font-size: 1.9rem;
}
h4 {
  font-size: 1.8rem;
}
ul {
  list-style: none;
}
a {
  text-decoration: none;
  color: var(--medium-purple);
}
a:hover {
  color: var(--light-purple);
}

.description p {
  margin: 1.5rem 0 1rem 0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
}

.hide {
  transition: all 0.2s ease-in-out;
  overflow: hidden;
  height: 0;
  opacity: 0;
}

body {
  background-color: var(--dark-background);
  color: var(--clear-text);
  font-family: "Oswald", sans-serif;
  width: 80%;
  margin: 0 auto;

  main {
    width: 90%;
    margin: 2rem auto;
    header {
      text-align: center;
      margin: 4rem 0 2rem 0;
    }
    #about-project {
      margin: 4rem 0 2rem 0;
      article {
        width: 80%;
        margin: 0 auto;
        h3 {
          text-align: center;
        }
      }
    }
    #about-project:hover #project-description {
      transition: all 0.6s ease-in-out;
      overflow: hidden;
      height: 100%;
      opacity: 1;
    }

    #arts {
      display: flex;
      flex-flow: column;
      margin: 3rem 0 2rem 0;
      width: 100%;
      justify-content: center;
      align-items: center;

      #nav-gallery {
        position: fixed;
        left: 0px;
        top: 15%;
        min-height: 450px;
        height: 70vh;

        ul {
          top: 0;
          height: 100%;
          z-index: 2;
          display: flex;
          flex-flow: column;
          justify-content: space-between;
          & figure {
            position: relative;
            margin: 0;
            z-index: 2;
            & img {
              height: 45px;
              width: 45px;
              border-radius: 50%;
            }
            & figcaption {
              display: none;
              position: absolute;
              text-wrap: nowrap;
              top: 22%;
              left: 53px;
            }
            &:hover img,
            &:focus img {
              box-shadow: 0 0 0 1px var(--light-purple);
            }
            &:hover figcaption,
            &:focus figcaption {
              display: block;
            }
          }
        }
        div.vertical-line {
          position: absolute;
          top: 0;
          left: 55px;
          z-index: 1;
          width: 1px;
          height: 100%;
          background-color: var(--light-green);
          justify-content: center;
          align-items: center;
          text-align: center;
        }
      }
      article {
        padding: 3rem;
        margin-top: 4rem;
        display: flex;
        flex-flow: column;
        width: 80%;
        align-items: center;

        /* black transparent panel */
        /* background: rgba(9, 10, 11, 0.5); */

        /* white transparent panel */
        background: rgba(248, 248, 255, 0.05);

        /* if disabling the panel background, disable also box-shadow bellow */
        box-shadow: -1px -1px 1px 0 black, 4px 6px 12px 6px black;

        h4 {
          align-self: baseline;
        }
        audio {
          display: block;
          display: none;
          align-self: baseline;
          height: 1.5rem;
          border-radius: 4%/50%;
          &:hover,
          &:focus {
            box-shadow: 0 0 5px 3px var(--medium-purple);
          }
        }
        figure {
          text-align: center;
          width: 100%;
          img {
            max-height: calc(100vh - 2rem);
            max-width: 100%;
            margin-bottom: 1rem;
            /* box-shadow: -1px -1px 1px 0 black, 4px 6px 12px 6px black; */
          }
          figcaption {
            text-align: center;
            font-weight: 500;
            font-size: 1.6rem;
          }
        }
        .technique {
          font-family: Arial, Helvetica, sans-serif;
          font-style: italic;
          text-align: center;
          p {
            margin: 0;
            padding: 0;
          }
        }
        &:last-child {
          margin-bottom: 3rem;
        }
      }
    }
  }
  footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    padding: 0.5rem 5rem 0 5rem;
    text-align: end;
    background-color: var(--dark-background);
  }
}

.highlight {
  & figure {
    & img {
      box-shadow: 0 0 0 1px var(--medium-purple);
    }
    & figcaption {
      display: block !important;
    }
  }
}

#background-image-container {
  position: fixed;
  z-index: -1;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  opacity: 0.15;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#arts article figure {
  * {
    padding: 0;
    margin: 0 !important;
    box-sizing: border-box;  
  }
  .frame-outerBevel {
    box-shadow: 4px 6px 12px 0 black;
    border-width: 5px;
    border-style: solid;
    border-color: rgb(109, 84, 58) rgb(24, 19, 13) rgb(24, 19, 13)
      rgb(109, 84, 58);
  }
  
  .frame-flatSurface {
    border: 12px solid rgb(65, 40, 16);
  }
  
  .frame-innerBevel {
    border-width: 5px;
    border-style: solid;
    border-color: rgb(24, 19, 13) rgb(109, 84, 58) rgb(109, 84, 58)
      rgb(24, 19, 13);
      img { /* including mat and gold beveled edge of mat */
        display: block;
        clear: both;
        height: 100%;
        width: 100%;
        padding: 7.5% 7.5% 10% 7.5%; /* Mat width */
        background-color: beige !important; 	/* Mat color */
        border-width: 3px;	/* Gold edge of mat */
        border-style: solid;
        border-color: rgb(207, 166, 0) rgb(207, 166, 0) rgb(145, 110, 0) rgb(145, 110, 0);
        }
  }
}

